metro-234:Build WSIT on JDK9