@@ -226,6 +226,17 @@
                     </execution>
                 </executions>
             </plugin>
+              <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <additionalJOptions>
+                        <additionalJOption>--add-modules</additionalJOption>
+                        <additionalJOption>java.activation</additionalJOption>
+                    </additionalJOptions>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
@@ -235,6 +246,10 @@
             <artifactId>webservices-api</artifactId>
             <version>${project.version}</version>
             <optional>true</optional>
+        </dependency>
+       <dependency>
+            <groupId>javax.xml.soap</groupId>
+            <artifactId>javax.xml.soap-api</artifactId>     
         </dependency>
     </dependencies>
 
